k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-service

spec:
  type: NodePort
  selector:
    app: notes

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
